# fastawsrestapi

./: .gitignore  Dockerfile  Makefile  README.md  config.py  package.json  pyproject.toml  webpack.config.js
.infra/terraform/: .terraform.lock.hcl  api.tf  api_auth.tf  documentation.tf  ecr.tf  locals.tf  outputs.tf  variable.tf  versions.tf
.infra/terraform/modules/api/: acm.tf  api-rest.tf  cognito.tf  lambda-iam.tf  lambda.tf  locals.tf  outputs.tf  variable.tf  waf.tf
.infra/terraform/modules/website/: acm.tf  cloudfront.tf  local.tf  outputs.tf  policy.tf  providers.tf  s3.tf  variables.tf
scripts/: build-push-lambda-image.sh  doc-new-version.py  generate-api-clients.sh  generate-openapi-files.py  increase-lambda-quota.sh  info.py  open-aws.py  publish-doc.sh  run-fastapi.sh  set-env.py  set-env.sh  tf-action.sh  upload-openapi-files-to-s3.py
src/: utils.py
src/api/: auth.py
src/api/doc/: doc.css  doc_manifest.json  index.html  index.js
src/api/versions/v1/: app.py  openapi-v1-swagger.json  openapi-v1-terraform.json
src/api/versions/v1/routers/: __init__.py  auth.py  demo.py
src/api/versions/v2/: app.py  openapi-v2-swagger.json  openapi-v2-terraform.json
src/api/versions/v2/routers/: demo.py
