[project]
name = "fast-rest-api" # This will be used for every terraform prefix
version = "0.1.0"
description = "Deploy your aws rest api in minutes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.9",
    "fastapi>=0.115.11",
    "mangum>=0.19.0",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[dependency-groups]
dev = ["toml>=0.10.2", "uvicorn>=0.34.0", "rich>=14.0.0"]
